--- a/views/parques.html
+++ b/views/parques.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,400;0,600;0,800;1,200;1,400;1,600;1,800&display=swap" rel="stylesheet">
 
     <!-- Bootstrap Sass -->
-    <link rel="stylesheet" href="./sass/custom.css">
+    <link rel="stylesheet" href="../sass/custom.css">
     
     <!-- Bootstrap Original 
       <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"> 
@@ -23,7 +23,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
       <div class="container container-fluid">
-        <a class="navbar-brand" href="./index.html">Todo Rutas</a>
+        <a class="navbar-brand" href="../index.html">Todo Rutas</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,7 +33,7 @@
               <a class="nav-link active" aria-current="page" href="#">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="views/parques.html">Parques</a>
+              <a class="nav-link active" aria-current="page" href="#">Parques</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -55,58 +55,30 @@
       </div>
     </nav>
   </header>
-
-  <br>
-  <!-- Carousel-->
-  <div class="container">
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="./images/Cerro-Manquehue.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Cerro Manquehue</h5>
-            <p>Parque para realizar senderismo en Santiago</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="./images/aguas-ramon.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Parque natural Aguas de Ramón</h5>
-            <p>Parque para realizar senderismo en Santiago</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="./images/torresdel-paine-700x367.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Parque natural Torres del Paine</h5>
-            <p>Parque para senderismo y camping en región de Magallanes y Antártica Chilena</p>
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-  </div>
-
-  <br>
+<br><br><br>
+  
   <!-- Recomendados -->
   <div class="container">
-    <h3 class="text-dark">Recomendados</h3>
-      <div class="row">
+  
+    <h3 class="text-dark">Parques</h3>
+	
+	<div>
+	<input type="text">
+	<input type="submit">
+	<select>
+		<option>Ordenar por...</option>
+		<option>Cercanía</option>
+		<option>Precio entrada</option>
+	</select>
+	<label></label>
+	<input type="checkbox">
+  </div>
+  <br>
+  <br>
+      <div class="col">
         <div class="col-12 col-md-4">
           <div class="card">
-            <img src="./images/Cerro-Manquehue.jpg" class="card-img-top" alt="...">
+            <img src="../images/Cerro-Manquehue.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Cerro Manquehue</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
@@ -119,7 +91,7 @@
 
         <div class="col-12 col-md-4">
           <div class="card">
-            <img src="./images/aguas-ramon.jpg" class="card-img-top" alt="...">
+            <img src="../images/aguas-ramon.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Aguas de Ramón</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
@@ -132,7 +104,7 @@
 
         <div class="col-12 col-md-4">
           <div class="card">
-            <img src="./images/torresdel-paine-700x367.jpg" class="card-img-top" alt="...">
+            <img src="../images/torresdel-paine-700x367.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Torres del Paine</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
@@ -227,7 +199,7 @@
     <!-- Copyright -->
   </footer>
 
-  <script src="./node_modules/@popperjs/dist/umd/popper.min.js"></script>
-  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="../node_modules/@popperjs/dist/umd/popper.min.js"></script>
+  <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
