--- a/views/parques.html
+++ b/views/parques.html
@@ -126,7 +126,7 @@
       <div class="row">
         <!--Grid column-->
         <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase text-light">Login</h5>
+          <h5 class="text-uppercase text-light">Acceso empleados</h5>
   
           <ul class="list-unstyled mb-0">
             <li>
