--- a/views/parques.html
+++ b/views/parques.html
@@ -70,7 +70,9 @@
 		<option>Cercanía</option>
 		<option>Precio entrada</option>
 	</select>
-	<label></label>
+	<label>Parques nacionales</label>
+	<input type="checkbox">
+  <label>Parques independientes</label>
 	<input type="checkbox">
   </div>
   <br>
