--- a/views/parques.html
+++ b/views/parques.html
@@ -78,41 +78,48 @@
   <br>
   <br>
       <div class="col">
-        <div class="col-12 col-md-4">
+
+        <div class="col-12 ">
           <div class="card">
-            <img src="../images/Cerro-Manquehue.jpg" class="card-img-top" alt="...">
+            <img src="../images/Cerro-Manquehue.jpg" class="card-img-top" alt="..." height="150px">
             <div class="card-body">
               <h5 class="card-title">Cerro Manquehue</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
             </div>
             <div class="card-body">
-              <a href="#" class="card-link">Ver más...</a>
+              <a href="#" class="card-link">Ver mapa</a>
+              <a href="#" class="card-link">Descargar mapa</a>
+              <a href="#" class="card-link">Hacer reserva</a>
             </div>
           </div>
         </div>
 
-        <div class="col-12 col-md-4">
+        <div class="col-12">
           <div class="card">
-            <img src="../images/aguas-ramon.jpg" class="card-img-top" alt="...">
+            <img src="../images/aguas-ramon.jpg" class="card-img-top" alt="..." height="150px">
             <div class="card-body">
               <h5 class="card-title">Aguas de Ramón</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
             </div>
             <div class="card-body">
-              <a href="#" class="card-link">Ver más...</a>
+              <a href="#" class="card-link">Ver mapa</a>
+              <a href="#" class="card-link">Descargar mapa</a>
+              <a href="#" class="card-link">Hacer reserva</a>
             </div>
           </div>
         </div>
 
-        <div class="col-12 col-md-4">
+        <div class="col-12">
           <div class="card">
-            <img src="../images/torresdel-paine-700x367.jpg" class="card-img-top" alt="...">
+            <img src="../images/torresdel-paine-700x367.jpg" class="card-img-top" alt="..." height="150px">
             <div class="card-body">
               <h5 class="card-title">Torres del Paine</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
             </div>
             <div class="card-body">
-              <a href="#" class="card-link">Ver más...</a>
+              <a href="#" class="card-link">Ver mapa</a>
+              <a href="#" class="card-link">Descargar mapa</a>
+              <a href="#" class="card-link">Hacer reserva</a>
             </div>
           </div>
         </div>
