--- a/views/login.html
+++ b/views/login.html
@@ -31,10 +31,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Parques</a>
+                <a class="nav-link" aria-current="page" href="parques.html">Parques</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -57,14 +54,12 @@
       </nav>
     </header>
 
-    <br>
-
     <!-- Login -->
     <form action="mantenedor.html">
       <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
           <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-            <div class="card bg-secondary text-white" style="border-radius: 1rem;">
+            <div id="logincard" class="card text-white" style="border-radius: 1rem;">
               <div class="card-body p-5 text-center">
     
                 <div class="mb-md-5 mt-md-4 pb-5">
@@ -103,7 +98,7 @@
 
     <footer>
       <!-- Grid container -->
-      <div class="container p-4 bg-secondary text-center text-lg-start">
+      <div class="container p-4 bg-info text-center text-lg-start">
         <!--Grid row-->
         <div class="row">
           <!--Grid column-->
