--- a/views/mantenedor.html
+++ b/views/mantenedor.html
@@ -17,10 +17,10 @@
       <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"> 
     -->
 
-    <title>Login</title>
+    <title>Mantenedor</title>
 </head>
 <body>
-  <!-- Header -->
+    <!-- Header -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" >
         <div class="container container-fluid">
@@ -31,10 +31,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Parques</a>
+                <a class="nav-link" aria-current="page" href="parques.html">Parques</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -62,10 +59,21 @@
     <div class="container text-center">
         <h1>Mantenedor</h1>
     </div>
+    
+    <div class="container">
+      <div class="row">
+        <ol class="col-12 breadcrumb">
+          <li class="breadcrumb-item"><a href="#">Agregar Parque</a></li>
+          <li class="breadcrumb-item"><a href="#">Modificar Parque</a></li>
+          <li class="breadcrumb-item"><a href="#">Listar Parques</a></li>
+          <li class="breadcrumb-item"><a href="#">Logout</a></li>
+        </ol>
+      </div>
+    </div>
 
     <footer>
       <!-- Grid container -->
-      <div class="container p-4 bg-secondary text-center text-lg-start">
+      <div class="container p-4 bg-info text-center text-lg-start">
         <!--Grid row-->
         <div class="row">
           <!--Grid column-->
