--- a/src/public/sass/custom.scss
+++ b/src/public/sass/custom.scss
@@ -1,12 +1,9 @@
 $font-family-sans-serif: 'Nunito', sans-serif;
 
-$theme-colors: (
-  "primary": #00bb4e,
-  "secondary": #f0f0f0,
-  "custom-login": #009100
-);
+$primary : #00bb4e;
+$secondary: #f0f0f0;
 
-
+$customlogin: #009100;
 
 body {
   padding-top: 65px;
@@ -14,3 +11,13 @@ body {
 
 
 @import "../../../node_modules/bootstrap/scss/bootstrap";
+
+
+// Para resetear
+// @import "../../../node_modules/bootstrap/scss/functions";
+// @import "../../../node_modules/bootstrap/scss/variables";
+// @import "../../../node_modules/bootstrap/scss/mixins";
+// @import "../../../node_modules/bootstrap/scss/root";
+
+// @import "../../../node_modules/bootstrap/scss/reboot";
+// @import "../../../node_modules/bootstrap/scss/type";
