--- a/src/public/sass/custom.css
+++ b/src/public/sass/custom.css
@@ -2,6 +2,10 @@ body {
   padding-top: 65px;
 }
 
+.carousel-item img {
+  height: 400px;
+}
+
 /*!
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -31,6 +35,7 @@ body {
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
+  --bs-customlogin: #009100;
   --bs-primary: #00bb4e;
   --bs-secondary: #f0f0f0;
   --bs-success: #198754;
@@ -39,6 +44,7 @@ body {
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
+  --bs-customlogin-rgb: 0, 145, 0;
   --bs-primary-rgb: 0, 187, 78;
   --bs-secondary-rgb: 240, 240, 240;
   --bs-success-rgb: 25, 135, 84;
@@ -3213,6 +3219,47 @@ fieldset:disabled .btn {
   opacity: 0.65;
 }
 
+.btn-customlogin {
+  color: #000;
+  background-color: #009100;
+  border-color: #009100;
+}
+
+.btn-customlogin:hover {
+  color: #000;
+  background-color: #26a226;
+  border-color: #1a9c1a;
+}
+
+.btn-check:focus + .btn-customlogin, .btn-customlogin:focus {
+  color: #000;
+  background-color: #26a226;
+  border-color: #1a9c1a;
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(0, 123, 0, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(0, 123, 0, 0.5);
+}
+
+.btn-check:checked + .btn-customlogin,
+.btn-check:active + .btn-customlogin, .btn-customlogin:active, .btn-customlogin.active,
+.show > .btn-customlogin.dropdown-toggle {
+  color: #000;
+  background-color: #33a733;
+  border-color: #1a9c1a;
+}
+
+.btn-check:checked + .btn-customlogin:focus,
+.btn-check:active + .btn-customlogin:focus, .btn-customlogin:active:focus, .btn-customlogin.active:focus,
+.show > .btn-customlogin.dropdown-toggle:focus {
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(0, 123, 0, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(0, 123, 0, 0.5);
+}
+
+.btn-customlogin:disabled, .btn-customlogin.disabled {
+  color: #000;
+  background-color: #009100;
+  border-color: #009100;
+}
+
 .btn-primary {
   color: #000;
   background-color: #00bb4e;
@@ -3539,6 +3586,40 @@ fieldset:disabled .btn {
   color: #fff;
   background-color: #212529;
   border-color: #212529;
+}
+
+.btn-outline-customlogin {
+  color: #009100;
+  border-color: #009100;
+}
+
+.btn-outline-customlogin:hover {
+  color: #000;
+  background-color: #009100;
+  border-color: #009100;
+}
+
+.btn-check:focus + .btn-outline-customlogin, .btn-outline-customlogin:focus {
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(0, 145, 0, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(0, 145, 0, 0.5);
+}
+
+.btn-check:checked + .btn-outline-customlogin,
+.btn-check:active + .btn-outline-customlogin, .btn-outline-customlogin:active, .btn-outline-customlogin.active, .btn-outline-customlogin.dropdown-toggle.show {
+  color: #000;
+  background-color: #009100;
+  border-color: #009100;
+}
+
+.btn-check:checked + .btn-outline-customlogin:focus,
+.btn-check:active + .btn-outline-customlogin:focus, .btn-outline-customlogin:active:focus, .btn-outline-customlogin.active:focus, .btn-outline-customlogin.dropdown-toggle.show:focus {
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(0, 145, 0, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(0, 145, 0, 0.5);
+}
+
+.btn-outline-customlogin:disabled, .btn-outline-customlogin.disabled {
+  color: #009100;
+  background-color: transparent;
 }
 
 .btn-outline-primary {
@@ -5609,6 +5690,16 @@ fieldset:disabled .btn {
   padding: 1.25rem 1rem;
 }
 
+.alert-customlogin {
+  color: #005700;
+  background-color: #cce9cc;
+  border-color: #b3deb3;
+}
+
+.alert-customlogin .alert-link {
+  color: #004600;
+}
+
 .alert-primary {
   color: #00702f;
   background-color: #ccf1dc;
@@ -6020,6 +6111,22 @@ fieldset:disabled .btn {
 
 .list-group-flush > .list-group-item:last-child {
   border-bottom-width: 0;
+}
+
+.list-group-item-customlogin {
+  color: #005700;
+  background-color: #cce9cc;
+}
+
+.list-group-item-customlogin.list-group-item-action:hover, .list-group-item-customlogin.list-group-item-action:focus {
+  color: #005700;
+  background-color: #b8d2b8;
+}
+
+.list-group-item-customlogin.list-group-item-action.active {
+  color: #fff;
+  background-color: #005700;
+  border-color: #005700;
 }
 
 .list-group-item-primary {
@@ -7361,6 +7468,14 @@ fieldset:disabled .btn {
   content: "";
 }
 
+.link-customlogin {
+  color: #009100;
+}
+
+.link-customlogin:hover, .link-customlogin:focus {
+  color: #33a733;
+}
+
 .link-primary {
   color: #00bb4e;
 }
@@ -7857,6 +7972,10 @@ fieldset:disabled .btn {
 
 .border-start-0 {
   border-left: 0 !important;
+}
+
+.border-customlogin {
+  border-color: #009100 !important;
 }
 
 .border-primary {
@@ -8763,6 +8882,11 @@ fieldset:disabled .btn {
 }
 
 /* rtl:end:remove */
+.text-customlogin {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-customlogin-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-primary {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-primary-rgb), var(--bs-text-opacity)) !important;
@@ -8852,6 +8976,11 @@ fieldset:disabled .btn {
 
 .text-opacity-100 {
   --bs-text-opacity: 1;
+}
+
+.bg-customlogin {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-customlogin-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-primary {
