--- a/src/public/sass/custom.scss
+++ b/src/public/sass/custom.scss
@@ -3,21 +3,36 @@ $font-family-sans-serif: 'Nunito', sans-serif;
 $primary : #00bb4e;
 $secondary: #f0f0f0;
 
-$customlogin: #009100;
-
 body {
   padding-top: 65px;
 }
 
+.carousel-item img {
+  height: 400px;
+}
+
+
+
+@import "../../../node_modules/bootstrap/scss/_functions";
+@import "../../../node_modules/bootstrap/scss/_variables";
+
+$colores-custom: (
+  "customlogin": #009100
+);
+
+$theme-colors: map-merge($colores-custom, $theme-colors);
+
+$theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
+$utilities-colors: map-merge(
+  $theme-colors-rgb,
+  (
+    "black": to-rgb($black),
+    "white": to-rgb($white),
+    "body":  to-rgb($body-color)
+  )
+);
+
+$utilities-text-colors: map-loop($utilities-colors, rgba-css-var, "$key", "text");
+$utilities-bg-colors: map-loop($utilities-colors, rgba-css-var, "$key", "bg");
 
 @import "../../../node_modules/bootstrap/scss/bootstrap";
-
-
-// Para resetear
-// @import "../../../node_modules/bootstrap/scss/functions";
-// @import "../../../node_modules/bootstrap/scss/variables";
-// @import "../../../node_modules/bootstrap/scss/mixins";
-// @import "../../../node_modules/bootstrap/scss/root";
-
-// @import "../../../node_modules/bootstrap/scss/reboot";
-// @import "../../../node_modules/bootstrap/scss/type";
