--- a/src/views/parques.ejs
+++ b/src/views/parques.ejs
@@ -4,27 +4,36 @@
 <body>
     <%- include('./partials/nav.ejs') %> 
   
-  <!-- Filtros -->
   <div class="container mb-3">
     <h3 class="text-dark">Parques</h3>
-    <div class="row">
-      <div class="col-12">
-        <input type="text">
-        <input type="submit">
-        <select>
-          <option>Ordenar por...</option>
-          <option>Cercanía</option>
-          <option>Precio entrada</option>
+
+    <!-- Filtros -->
+    <form action="#" class="row g-4 mb-3 justify-content-center">
+      <div class="col-5">
+        <input class="form-control" type="text" placeholder="Buscar...">
+      </div>
+      <div class="col-auto">
+        <button class="btn btn-outline-primary">Filtrar</button>
+      </div>
+      <div class="col-auto">
+        <select class="form-select">
+          <option selected>Ordenar por...</option>
+          <option value="1">Cercanía</option>
+          <option value="2">Precio entrada</option>
         </select>
       </div>
-      <div>
-        <label>Parques nacionales</label>
-        <input type="checkbox">
-        <label>Parques independientes</label>
-        <input type="checkbox">
+      <div class="col-auto">
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="cboxNacionales">
+          <label class="form-check-label" for="flexCheckDefault">Parques nacionales</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="cboxIndependientes">
+          <label class="form-check-label">Parques independientes</label>
+        </div>
       </div>
-    </div>
-	</div>
+    </form>
+
 
   <!-- Tarjetas -->
   <div class="container">
