--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/parques">Parques</a>
+              <a class="nav-link <% if (title === 'Parques') { %>active<% } %> " aria-current="page" href="/parques">Parques</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
