Mejoras visuales y navbar

--- a/src/views/parques.ejs
+++ b/src/views/parques.ejs
@@ -4,8 +4,8 @@
 <body>
     <%- include('./partials/nav.ejs') %> 
   
-  <div class="container mb-3">
-    <h3 class="text-dark">Parques</h3>
+  <div class="container my-3">
+    <h3 class="display-5 text-center my-4 text-uppercase">Parques</h3>
 
     <!-- Filtros -->
     <form action="#" class="row g-4 mb-3 justify-content-center">
@@ -40,7 +40,7 @@
 
     <div class="row">
       <div class="col-12">
-        <article class="card mb-3 bg-secondary">
+        <article class="card mb-3 bg-secondary shadow-sm">
           <div class="row g-0 align-items-center">
             <div class="col-md-4">
               <img src="../images/Cerro-Manquehue.jpg" class="rounded" alt="..." style="width: 100%; height: auto">
@@ -61,7 +61,7 @@
 
     <div class="row">
       <div class="col-12">
-        <article class="card mb-3 bg-secondary">
+        <article class="card mb-3 bg-secondary shadow-sm">
           <div class="row g-0 align-items-center">
             <div class="col-md-4">
               <img src="../images/aguas-ramon.jpg" class="rounded" alt="..." style="width: 100%; height: auto">
@@ -82,7 +82,7 @@
 
     <div class="row">
       <div class="col-12">
-        <article class="card mb-3 bg-secondary">
+        <article class="card mb-3 bg-secondary shadow-sm">
           <div class="row g-0 align-items-center">
             <div class="col-md-4">
               <img src="../images/torresdel-paine-700x367.jpg" class="rounded" alt="..." style="width: 100%; height: auto">
