--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,33 +6,33 @@
   <%- include('./partials/nav.ejs') %> 
 
   <!-- Carrusel -->
-  <div class="container mb-3">
+  <div class="container my-3">
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
-      <div class="carousel-inner">
+      <div class="carousel-inner rounded shadow-lg">
         <div class="carousel-item active">
-          <img src="../images/Cerro-Manquehue.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Cerro Manquehue</h5>
-            <p>Parque para realizar senderismo en Santiago</p>
+          <img src="../images/Cerro-Manquehue.jpg" class="d-block w-100" alt="CerroManquehue">
+          <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-25">
+            <h5 class="display-4">Cerro Manquehue</h5>
+            <p class="fs-4">Parque para realizar senderismo en Santiago</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../images/aguas-ramon.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Parque natural Aguas de Ramón</h5>
-            <p>Parque para realizar senderismo en Santiago</p>
+          <img src="../images/aguas-ramon.jpg" class="d-block w-100" alt="AguasRamon">
+          <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-25">
+            <h5 class="display-4">Parque natural Aguas de Ramón</h5>
+            <p class="fs-4">Parque para realizar senderismo en Santiago</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../images/torresdel-paine-700x367.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Parque natural Torres del Paine</h5>
-            <p>Parque para senderismo y camping en región de Magallanes y Antártica Chilena</p>
+          <img src="../images/torresdel-paine-700x367.jpg" class="d-block w-100" alt="TorresPaine">
+          <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-25">
+            <h5 class="display-4">Parque natural Torres del Paine</h5>
+            <p class="fs-4">Parque para senderismo y camping en región de Magallanes y Antártica Chilena</p>
           </div>
         </div>
       </div>
@@ -48,12 +48,12 @@
   </div>
 
   <!-- Recomendados -->
-  <div class="container">
-    <h3 class="h2 text-dark">Recomendados</h3>
+  <div class="container mt-5">
+    <h3 class="h2 text-dark text-center">Recomendados</h3>
 
     <div class="row mb-5">
       <div class="col-12 col-md-4">
-        <div class="card bg-secondary">
+        <div class="card bg-secondary shadow">
           <img src="../images/Cerro-Manquehue.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Cerro Manquehue</h5>
@@ -66,7 +66,7 @@
       </div>
 
       <div class="col-12 col-md-4">
-        <div class="card bg-secondary">
+        <div class="card bg-secondary shadow">
           <img src="../images/aguas-ramon.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Aguas de Ramón</h5>
@@ -79,7 +79,7 @@
       </div>
 
       <div class="col-12 col-md-4">
-        <div class="card bg-secondary">
+        <div class="card bg-secondary shadow">
           <img src="../images/torresdel-paine-700x367.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Torres del Paine</h5>
