--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -1,32 +1,26 @@
-<!-- NavBar -->
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
       <div class="container container-fluid">
         <a class="navbar-brand" href="/">Todo Rutas</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        
+        <!-- Toggle button para movil -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+        <!-- Links -->
+        <div class="collapse navbar-collapse justify-content-end align-center" id="mainNav">
+          <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link <% if (title === 'Parques') { %>active<% } %> " aria-current="page" href="/parques">Parques</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Contacto
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Contacto</a></li>
-                <li><a class="dropdown-item" href="#">Sobre nosotros</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Centro de ayuda</a></li>
-              </ul>
+            <li class="nav-item">
+              <a class="nav-link <% if (title === 'SobreNosotros') { %>active<% } %> " aria-current="page" href="/aboutus">Sobre nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link <% if (title === 'Ayuda') { %>active<% } %> " aria-current="page" href="/help">Centro de ayuda</a>
             </li>
           </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
-            <button class="btn btn-outline-light" type="submit">Buscar</button>
-          </form>
         </div>
       </div>
     </nav>
