--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -15,21 +15,21 @@
       </div>
       <div class="carousel-inner rounded shadow-lg">
         <div class="carousel-item active">
-          <img src="../images/Cerro-Manquehue.jpg" class="d-block w-100" alt="CerroManquehue">
+          <img src="images/Cerro-Manquehue.jpg" class="d-block w-100" alt="CerroManquehue">
           <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-25">
             <h5 class="display-4">Cerro Manquehue</h5>
             <p class="fs-4">Parque para realizar senderismo en Santiago</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../images/aguas-ramon.jpg" class="d-block w-100" alt="AguasRamon">
+          <img src="images/aguas-ramon.jpg" class="d-block w-100" alt="AguasRamon">
           <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-25">
             <h5 class="display-4">Parque natural Aguas de Ramón</h5>
             <p class="fs-4">Parque para realizar senderismo en Santiago</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../images/torresdel-paine-700x367.jpg" class="d-block w-100" alt="TorresPaine">
+          <img src="images/torresdel-paine-700x367.jpg" class="d-block w-100" alt="TorresPaine">
           <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-25">
             <h5 class="display-4">Parque natural Torres del Paine</h5>
             <p class="fs-4">Parque para senderismo y camping en región de Magallanes y Antártica Chilena</p>
@@ -54,7 +54,7 @@
     <div class="row mb-5">
       <div class="col-12 col-md-4">
         <div class="card bg-secondary shadow">
-          <img src="../images/Cerro-Manquehue.jpg" class="card-img-top" alt="...">
+          <img src="images/Cerro-Manquehue.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Cerro Manquehue</h5>
             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
@@ -67,7 +67,7 @@
 
       <div class="col-12 col-md-4">
         <div class="card bg-secondary shadow">
-          <img src="../images/aguas-ramon.jpg" class="card-img-top" alt="...">
+          <img src="images/aguas-ramon.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Aguas de Ramón</h5>
             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
@@ -80,7 +80,7 @@
 
       <div class="col-12 col-md-4">
         <div class="card bg-secondary shadow">
-          <img src="../images/torresdel-paine-700x367.jpg" class="card-img-top" alt="...">
+          <img src="images/torresdel-paine-700x367.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Torres del Paine</h5>
             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ea hic molestias animi, illum dicta, id consequuntur amet aspernatur minima ullam non sunt laboriosam voluptate perferendis! Numquam iusto illum officiis.<p>
