--- a/src/views/parques.ejs
+++ b/src/views/parques.ejs
@@ -43,7 +43,7 @@
         <article class="card mb-3 bg-secondary shadow-sm">
           <div class="row g-0 align-items-center">
             <div class="col-md-4">
-              <img src="../images/Cerro-Manquehue.jpg" class="rounded" alt="..." style="width: 100%; height: auto">
+              <img src="images/Cerro-Manquehue.jpg" class="rounded" alt="..." style="width: 100%; height: auto">
             </div>
             <div class="col-md-8">
               <div class="card-body ms-3">
@@ -64,7 +64,7 @@
         <article class="card mb-3 bg-secondary shadow-sm">
           <div class="row g-0 align-items-center">
             <div class="col-md-4">
-              <img src="../images/aguas-ramon.jpg" class="rounded" alt="..." style="width: 100%; height: auto">
+              <img src="images/aguas-ramon.jpg" class="rounded" alt="..." style="width: 100%; height: auto">
             </div>
             <div class="col-md-8">
               <div class="card-body ms-3">
@@ -85,7 +85,7 @@
         <article class="card mb-3 bg-secondary shadow-sm">
           <div class="row g-0 align-items-center">
             <div class="col-md-4">
-              <img src="../images/torresdel-paine-700x367.jpg" class="rounded" alt="..." style="width: 100%; height: auto">
+              <img src="images/torresdel-paine-700x367.jpg" class="rounded" alt="..." style="width: 100%; height: auto">
             </div>
             <div class="col-md-8">
               <div class="card-body ms-3">
