--- a/src/views/parques.ejs
+++ b/src/views/parques.ejs
@@ -67,9 +67,9 @@
                 </p>
                 <div style="text-align: right;">
                   
-                  <a href="#" class="btn btn-primary" style="color: #003123; font-weight: bold;">Ver mapa</a>
-                  <a href="#" class="btn btn-primary" style="color: #003123; font-weight: bold;">Descargar mapa</a>
-                  <a href="#" class="btn btn-primary" style="color: #003123; font-weight: bold;">Hacer reserva</a>
+                  <a href="#" class="btn btn-primary">Ver mapa</a>
+                  <a href="#" class="btn btn-primary">Descargar mapa</a>
+                  <a href="#" class="btn btn-primary">Hacer reserva</a>
                 </div>
                 
                 
