--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,49 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
   <%- include('./partials/head.ejs') %> 
-
+  <link href='https://fonts.googleapis.com/css?family=Alatsi' rel='stylesheet'>
   <body>
   <%- include('./partials/nav.ejs') %> 
 
   <!-- Carrusel -->
-  <div class="container my-3">
+
+  <section class="container my-3 pattern2 ">
+    
+    <div class="index-caption ">
+      <h2 style="font-size:60px">Todo Rutas</h2>
+      <a class="btn btn-primary-index"  href="./parques">Ver parques</a>
+      
+    </div>
+  </section>
+
+
+  
+  <div class="container my-3 ">
+    
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      </div>
+      
       <div class="carousel-inner rounded shadow-lg">
-        <div class="carousel-item active">
-          <img src="images/Cerro-Manquehue.jpg" class="d-block w-100" alt="CerroManquehue">
-          <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-25">
-            <h5 class="display-4">Cerro Manquehue</h5>
-            <p class="fs-4">Parque para realizar senderismo en Santiago</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="images/aguas-ramon.jpg" class="d-block w-100" alt="AguasRamon">
-          <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-25">
-            <h5 class="display-4">Parque natural Aguas de Ramón</h5>
-            <p class="fs-4">Parque para realizar senderismo en Santiago</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="images/torresdel-paine-700x367.jpg" class="d-block w-100" alt="TorresPaine">
-          <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-25">
-            <h5 class="display-4">Parque natural Torres del Paine</h5>
-            <p class="fs-4">Parque para senderismo y camping en región de Magallanes y Antártica Chilena</p>
+        <div>
+          <img src="images/index.jpg" class="d-block w-100" alt="CerroManquehue" height="300px" style="filter: brightness(20%)">
+
+          <div class="carousel-caption">
+            <h2 style="font-size:60px">Todo Rutas</h2>
+            <a class="btn btn-primary-index"  href="./parques">Ver parques</a>
+            
           </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+
     </div>
   </div>
 
