Programacion rutas mantenedor parques

--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -6,6 +6,7 @@
   <%- include('./partials/nav.ejs') %> 
 
   <div class="container my-3">
+    <h3 class="display-5 text-center my-4 text-uppercase">Sobre nosotros</h3>
     <div class="row">
         <div class="card col-sm-6 col-md-5 col-lg-6 border-primary" style="margin: 4px;" >
             <div class="card-body">
@@ -23,7 +24,7 @@
                   la capacidad de consultar la información, visualizar y descargar mapas de los
                   parques y también realizar reservas.                   
               </p>
-              <a href="/Parques" class="card-link">Ver parques</a>
+              <a href="/parques" class="card-link">Ver parques</a>
             </div>
         </div>
         <div class="card col-sm-8 col-md-2 col-lg-5  border-primary" style="margin: 4px;"  >
