--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -15,7 +15,7 @@
               <a class="nav-link <% if (title === 'Parques') { %>active<% } %> " aria-current="page" href="/parques">Parques</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link <% if (title === 'SobreNosotros') { %>active<% } %> " aria-current="page" href="/about">Sobre nosotros</a>
+              <a class="nav-link <% if (title === 'About') { %>active<% } %> " aria-current="page" href="/about">Sobre nosotros</a>
             </li>
             <li class="nav-item">
               <a class="nav-link <% if (title === 'Ayuda') { %>active<% } %> " aria-current="page" href="/help">Centro de ayuda</a>
