--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -5,7 +5,7 @@
     <%- include('./partials/nav.ejs') %> 
 
     <!-- Login -->
-    <form action="/mantenedor" method="get">
+    <form action="/mantenedor/" method="get">
       <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
           <div class="col-12 col-md-8 col-lg-6 col-xl-5">
