--- a/src/views/mantenedor/index.ejs
+++ b/src/views/mantenedor/index.ejs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
-    <%- include('./partials/head.ejs') %> 
+    <%- include('../partials/head.ejs') %> 
 <body>
-    <%- include('./partials/nav.ejs') %> 
-
-    <br><br><br><br>
+    <%- include('../partials/nav.ejs') %> 
     
     <div class="container text-center">
         <h1>Mantenedor</h1>
@@ -13,7 +11,7 @@
     <div class="container">
       <div class="row">
         <ol class="col-12 breadcrumb">
-          <li class="breadcrumb-item"><a href="#">Agregar Parque</a></li>
+          <li class="breadcrumb-item"><a href="mantenedor/agregar">Agregar Parque</a></li>
           <li class="breadcrumb-item"><a href="#">Modificar Parque</a></li>
           <li class="breadcrumb-item"><a href="#">Listar Parques</a></li>
           <li class="breadcrumb-item"><a href="#">Logout</a></li>
@@ -21,6 +19,6 @@
       </div>
     </div>
 
-    <%- include('./partials/footer.ejs') %> 
+    <%- include('../partials/footer.ejs') %> 
 </body>
 </html>
