MVC - requiere npm install

--- a/src/views/mantenedor/agregar.ejs
+++ b/src/views/mantenedor/agregar.ejs
@@ -1,19 +1,11 @@
-<!DOCTYPE html>
-<html lang="es">
-    <%- include('../partials/head.ejs') %> 
-<body>
-    <%- include('../partials/nav.ejs') %> 
+<%- layout('layouts/main')  %> 
     
-    <div class="container text-center">
-        <h1>Agregar Parque</h1>
-    </div>
-    
-    <div class="container">
-      <div class="row">
-        <h1 class="display-4">Agregar Parque</h1>
-      </div>
-    </div>
+<div class="container text-center">
+    <h1>Agregar Parque</h1>
+</div>
 
-    <%- include('../partials/footer.ejs') %> 
-</body>
-</html>
+<div class="container">
+  <div class="row">
+    <h1 class="display-4">Agregar Parque</h1>
+  </div>
+</div>
