--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,51 +1,43 @@
-<!DOCTYPE html>
-<html lang="es">
-    <%- include('./partials/head.ejs') %> 
-<body>
-    <%- include('./partials/nav.ejs') %> 
+<%- layout('layouts/main')  %> 
 
-    <!-- Login -->
-    <form action="/mantenedor/" method="get">
-      <div class="container py-5 h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-          <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-            <div class="card text-white bg-customlogin" style="border-radius: 1rem;">
-              <div class="card-body p-5 text-center">
-    
-                <div class="mb-md-5 mt-md-4 pb-5">
-    
-                  <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-                  <p class="text-white-50 mb-5">Ingrese su email y contraseña</p>
-    
-                  <div class="form-outline form-white mb-4">
-                    <input type="email" id="typeEmailX" class="form-control form-control-lg" />
-                    <label class="form-label" for="typeEmailX">Email</label>
-                  </div>
-    
-                  <div class="form-outline form-white mb-4">
-                    <input type="password" id="typePasswordX" class="form-control form-control-lg" />
-                    <label class="form-label" for="typePasswordX">Contraseña</label>
-                  </div>
-    
-                  <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">¿Olvidó su contraseña?</a></p>
-    
-                  <button class="btn btn-outline-light btn-lg px-5" type="submit">Iniciar Sesión</button>
-    
-                  <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                    <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
-                    <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
-                    <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
-                  </div>
-    
-                </div>
-    
+<!-- Login -->
+<form action="/mantenedor" method="get">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="card text-white bg-customlogin" style="border-radius: 1rem;">
+          <div class="card-body p-5 text-center">
+
+            <div class="mb-md-5 mt-md-4 pb-5">
+
+              <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
+              <p class="text-white-50 mb-5">Ingrese su email y contraseña</p>
+
+              <div class="form-outline form-white mb-4">
+                <input type="email" id="typeEmailX" class="form-control form-control-lg" />
+                <label class="form-label" for="typeEmailX">Email</label>
               </div>
+
+              <div class="form-outline form-white mb-4">
+                <input type="password" id="typePasswordX" class="form-control form-control-lg" />
+                <label class="form-label" for="typePasswordX">Contraseña</label>
+              </div>
+
+              <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">¿Olvidó su contraseña?</a></p>
+
+              <button class="btn btn-outline-light btn-lg px-5" type="submit">Iniciar Sesión</button>
+
+              <div class="d-flex justify-content-center text-center mt-4 pt-1">
+                <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
+                <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
+                <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
+              </div>
+
             </div>
+
           </div>
         </div>
       </div>
-    </form>
-
-    <%- include('./partials/footer.ejs') %> 
-</body>
-</html>
+    </div>
+  </div>
+</form>
