Container para todas las vistas

--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -55,7 +55,9 @@
         </nav>
     </header>
 
-    <%- body%>
+    <div class="container my-3">
+      <%- body%>
+    </div>
 
     <!-- Footer -->
     <footer>
