--- a/src/views/mantenedor/agregar.ejs
+++ b/src/views/mantenedor/agregar.ejs
@@ -1,11 +1,9 @@
 <%- layout('layouts/main')  %> 
-    
-<div class="container text-center">
-    <h1>Agregar Parque</h1>
+
+<div class="row">
+  <h1 class="display-4 text-center">Agregar Parque</h1>
 </div>
 
 <div class="container">
-  <div class="row">
-    <h1 class="display-4">Agregar Parque</h1>
-  </div>
+  <!-- formulario -->
 </div>
