--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -2,7 +2,7 @@
 
 <!-- Login -->
 <form action="/mantenedor" method="get">
-  <div class="container py-5 h-100">
+  <div class="container h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
         <div class="card text-white bg-customlogin" style="border-radius: 1rem;">
