--- a/src/views/mantenedor/index.ejs
+++ b/src/views/mantenedor/index.ejs
@@ -1,16 +1,14 @@
 <%- layout('layouts/main')  %> 
 
-<div class="container text-center">
-    <h1>Mantenedor</h1>
+<div class="row">
+  <h1 class="display-4 text-center">Mantenedor</h1>
 </div>
 
-<div class="container">
-  <div class="row">
-    <ol class="col-12 breadcrumb">
-      <li class="breadcrumb-item"><a href="/mantenedor/agregar">Agregar Parque</a></li>
-      <li class="breadcrumb-item"><a href="#">Modificar Parque</a></li>
-      <li class="breadcrumb-item"><a href="#">Listar Parques</a></li>
-      <li class="breadcrumb-item"><a href="#">Logout</a></li>
-    </ol>
-  </div>
+<div class="row">
+  <ol class="col-12 breadcrumb">
+    <li class="breadcrumb-item"><a href="/mantenedor/agregar">Agregar Parque</a></li>
+    <li class="breadcrumb-item"><a href="#">Modificar Parque</a></li>
+    <li class="breadcrumb-item"><a href="#">Listar Parques</a></li>
+    <li class="breadcrumb-item"><a href="#">Logout</a></li>
+  </ol>
 </div>
