--- a/src/views/mantenedor/index.ejs
+++ b/src/views/mantenedor/index.ejs
@@ -4,11 +4,4 @@
   <h1 class="display-4 text-center">Mantenedor</h1>
 </div>
 
-<div class="row">
-  <ol class="col-12 breadcrumb">
-    <li class="breadcrumb-item"><a href="/mantenedor/agregar">Agregar Parque</a></li>
-    <li class="breadcrumb-item"><a href="#">Modificar Parque</a></li>
-    <li class="breadcrumb-item"><a href="#">Listar Parques</a></li>
-    <li class="breadcrumb-item"><a href="#">Logout</a></li>
-  </ol>
-</div>
+<%- include('navTabs') %> 
