--- a/src/views/mantenedor/agregar.ejs
+++ b/src/views/mantenedor/agregar.ejs
@@ -69,7 +69,7 @@
     </div>
 
     <div class="form-floating">
-      <textarea type="text" class="form-control" id="desc" name="desc" required></textarea>
+      <textarea type="text" rows="4" class="form-control" id="desc" name="desc" required></textarea>
       <label for="desc">Descripción</label>
     </div>
 
