--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -17,8 +17,8 @@
 
 
     <!-- Importaciones necesarias para bootstrap en directorio estatico de express "scripts" -->
-        <script src="../../bootstrap.min.js" defer></script>
-        <script src="../../popper.min.js" defer></script>
+        <script src="../../../bootstrap.min.js" defer></script>
+        <script src="../../../popper.min.js" defer></script>
 
         <!-- CDN -->
         <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous" defer></script> -->
